examples/test/testpolicy12307.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12307
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key34: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value30
      podSelector:
        matchLabels:
          key2: value24
          key27: value2
          key7: value12
